--- a/index.html
+++ b/index.html
@@ -121,10 +121,13 @@
                 <div class="block d-flex gap-5">
                     <div class="position-relative box w-25 bg-white">
                         <div class="fdse">
-                            <img width="100%" src="./IMG/box1.png" alt="">
+                            <img class="position-relative" width="100%" src="./IMG/box1.png" alt="">
                         </div>
-                        <span class="text-white">
+                        <span class="bspan text-white">
                             Sale
+                        </span>
+                        <span class="ret">
+                            <img src="./IMG/shops.svg" alt="">
                         </span>
                        <div class="box_info p-4">
                         <div class="buy d-flex justify-content-between mt-3">
@@ -150,10 +153,13 @@
                     </div>
                     <div class="box position-relative w-25 bg-white">
                         <div class="">
-                            <img  width="100%" src="./IMG/box2.png" alt="">
+                            <img class="position-relative"  width="100%" src="./IMG/box2.png" alt="">
                         </div>
-                        <span class="text-white">
+                        <span class="bspan text-white">
                             Sale
+                        </span>
+                        <span class="ret">
+                            <img src="./IMG/shops.svg" alt="">
                         </span>
                        <div class="box_info p-4">
                         <div class="buy d-flex justify-content-between mt-3">
@@ -179,10 +185,13 @@
                     </div>
                     <div class="box position-relative w-25 bg-white">
                         <div class="">
-                            <img  width="100%" src="./IMG/box3.png" alt="">
+                            <img class="position-relative"  width="100%" src="./IMG/box3.png" alt="">
                         </div>
-                        <span class="text-white">
+                        <span class="bspan text-white">
                             Sale
+                        </span>
+                        <span class="ret">
+                            <img src="./IMG/shops.svg" alt="">
                         </span>
                        <div class="box_info p-4">
                         <div class="buy d-flex justify-content-between mt-3">
@@ -208,10 +217,13 @@
                     </div>
                     <div class=" position-relative box w-25 bg-white">
                         <div class="">
-                            <img width="100%" src="./IMG/box4.png" alt="">
+                            <img class="position-relative" width="100%" src="./IMG/box4.png" alt="">
                         </div>
-                        <span class="text-white">
+                        <span class="bspan text-white">
                             Sale
+                        </span>
+                        <span class="ret">
+                            <img src="./IMG/shops.svg" alt="">
                         </span>
                        <div class="box_info p-4">
                         <div class="buy d-flex justify-content-between mt-3">
